# ModernEvent

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  conanfile.txt
.devcontainer/devcpp-jammy-x86_64/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/devcpp-noble-x86_64/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/modernevent-jammy-x86_64/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh
.devcontainer/modernevent-noble-x86_64/: Dockerfile  devcontainer.json  docker-compose.yml
include/classiclib/: Events.hpp
include/eventlib/: Events.hpp
include/hellolib/: Events.hpp
include/purecomplib/: Events.hpp
include/templatecastlib/: Events.hpp
src/benchapp/: CMakeLists.txt  main.cpp
src/classiclib/: CMakeLists.txt  Events.cpp
src/eventapp/: CMakeLists.txt  main.cpp
src/eventlib/: CMakeLists.txt  Events.cpp
src/helloapp/: CMakeLists.txt  main.cpp
src/hellolib/: CMakeLists.txt  Events.cpp
src/purecomplib/: CMakeLists.txt  Events.cpp
src/templatecastlib/: CMakeLists.txt  Events.cpp
test/: CMakeLists.txt  testSessionEvents.cpp
